--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
-	<link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.min.css">
+	<link href="assets/css/material.css" rel="stylesheet" />
+	<link rel="stylesheet" href="assets/css/fullcalendar.min.css">
 
 </head>
 
